--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>
+  <body onload="render()">
+    <div id="ticTacToe"></div>
     <script src="./script.js"></script>
   </body>
 </html>
